added test for empty target dir

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ classifier =
 [files]
 scripts =
     bin/dib-run-parts
+    bin/dib-run-parts.cmd
+    bin/dib-run-parts.ps1
 
 [wheel]
 universal = 1
